examples/diagnostics/expected/1119-diagnostics-reserved-type-name-as-identifier.stderr
error: 'u8' is a reserved type name and cannot be used as an identifier
  --> examples/diagnostics/1119-diagnostics-reserved-type-name-as-identifier.sx:9:14
   |
 9 | takes_u8 :: (u8: i32) -> i32 { return u8; }
   |              ^^

error: 'i64' is a reserved type name and cannot be used as an identifier
  --> examples/diagnostics/1119-diagnostics-reserved-type-name-as-identifier.sx:12:5
   |
12 |     i64 : i32 = 3;
   |     ^^^

error: 'bool' is a reserved type name and cannot be used as an identifier
  --> examples/diagnostics/1119-diagnostics-reserved-type-name-as-identifier.sx:13:5
   |
13 |     bool : bool = true;
   |     ^^^^

error: 'string' is a reserved type name and cannot be used as an identifier
  --> examples/diagnostics/1119-diagnostics-reserved-type-name-as-identifier.sx:14:5
   |
14 |     string := "x";
   |     ^^^^^^
